@@ -77,6 +77,7 @@ public class TestBookKeeperPersistenceManager extends TestCase {
     BookKeeperTestBase bktb;
     private final int numBookies = 3;
     private final long readDelay = 2000L;
+    private final int maxEntriesPerLedger = 10;
 
     ServerConfiguration conf;
     ScheduledExecutorService scheduler;
@@ -271,6 +272,10 @@ public class TestBookKeeperPersistenceManager extends TestCase {
             @Override
             public int getConsumeInterval() {
                 return 0;
+            }
+            @Override
+            public long getMaxEntriesPerLedger() {
+                return maxEntriesPerLedger;
             }
         };
         org.apache.bookkeeper.conf.ClientConfiguration bkClientConf =
@@ -633,6 +638,31 @@ public class TestBookKeeperPersistenceManager extends TestCase {
         if (b == null) {
             fail("Scan request doesn't finish");
         }
+    }
+
+    @Test
+    // Add this test case for BOOKKEEPER-458
+    public void testReadWhenTopicChangeLedger() throws Exception {
+        final ByteString topic = ByteString.copyFromUtf8("testReadWhenTopicChangeLedger");
+        LinkedList<Message> msgs = new LinkedList<Message>();
+
+        // Write maxEntriesPerLedger entries to make topic change ledger
+        acquireTopic(topic);
+        msgs.addAll(publishMessages(topic, maxEntriesPerLedger));
+
+        // Notice, change ledger operation is asynchronous, so we should wait!!!
+        Thread.sleep(2000);
+
+        // Issue a scan request right start from the new ledger
+        LinkedBlockingQueue<Boolean> statusQueue = new LinkedBlockingQueue<Boolean>();
+        RangeScanRequest scan = new RangeScanRequest(topic, maxEntriesPerLedger + 1, 1, Long.MAX_VALUE,
+                new RangeScanVerifier(msgs, null), statusQueue);
+        manager.scanMessages(scan);
+        Boolean b = statusQueue.poll(10 * readDelay, TimeUnit.MILLISECONDS);
+        if (b == null) {
+            fail("Scan request timeout");
+        }
+        assertFalse("Expect none message is scanned on the new created ledger", b);
     }
 
     class TestCallback implements Callback<PubSubProtocol.MessageSeqId> {
